feat(proxy): introduce TimerService
Signed-off-by: SSpirits <admin@lv5.moe>